# certifiable-quant

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTOR-LICENSE-AGREEMENT.md  LICENSE  Makefile  README.md  buildfile  manifest  repositories.manifest
certifiable-build/: LICENSE
certifiable-build/github/workflows/: ci.yml
certifiable-build/scripts/: config.sh
docs/: CQ-MATH-001.md  CQ-STRUCT-001.md
docs/requirements/: SRS-001-ANALYZE.md  SRS-002-CALIBRATE.md  SRS-003-CONVERT.md  SRS-004-VERIFY.md  SRS-005-CERTIFICATE.md
include/: analyze.h  buildfile  calibrate.h  certificate.h  convert.h  cq_types.h  dvm.h  sha256.h  verify.h
src/: buildfile
src/analyze/: analyze.c
src/audit/: sha256.c
src/calibrate/: calibrate.c
src/certificate/: certificate.c
src/convert/: bn_fold.c  weight_quant.c
src/dvm/: primitives.c
src/verify/: verify.c
tests/unit/: buildfile  test_analyze.c  test_bit_identity.c  test_calibrate.c  test_certificate.c  test_convert.c  test_primitives.c  test_verify.c
